# bitruss_decomposition

./: CMakeLists.txt  README.md
dataset/marvel/: bn.txt  out.marvel  temp.txt  temp2.txt
include/bloom/: bloom.h
include/factory/: factory.h
include/graph/: edge.h  graph.h  graph_batch.h
include/utils/: current_time.h  flags.h  my_vector.h
src/: CMakeLists.txt
src/bloom/: CMakeLists.txt  bloom.cc
src/factory/: CMakeLists.txt  factory.cc
src/graph/: CMakeLists.txt  edge.cc  graph.cc  graph_batch.cc
src/main/: CMakeLists.txt  main.cc
src/utils/: CMakeLists.txt  current_time.cc  flags.cc
